cargo-features = ["edition"]

[package]
name = "booru"
version = "0.1.0"
authors = ["Evan.Stoll <evan.stoll@rjginc.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
reqwest = "0.9.3"
serde = "1.0.80"
serde_derive = "1.0.80"
url = "1.7.1"
serde_json = "1.0.32"
more-asserts = "0.2.1"
image = "0.20.0"
