[package]
name = "booru"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]

[dependencies]
dotenv = "0.15.0"
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
url = "2.1.0"
serde_json = "1.0.44"
more-asserts = "0.2.1"
image = "0.22.3"
hyper = "0.12.35"
env_logger = "0.7.1"
log = "0.4.8"
envy = "0.4.0"
env = "0.0.0"
directories = "2.0.2"
lazy_static = "1.4.0"
